--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "qrreader": "^1.0.5",
     "request": "^2.88.0",
     "xml2js": "^0.4.23"
   },
